# cmapss_predictive_maintenance

./: .gitignore  README.md  app.py  app_multi.py  main.py  pyproject.toml  utils.py
notebook/: apdative_cap.ipynb  cap_sweep.ipynb  diagnostic.ipynb  early_mode.ipynb  eda.ipynb  eda_multi.ipynb  kpi.ipynb  rul.ipynb  rul_multi.ipynb  weibull.ipynb  weibull_multi.ipynb
