[project]
name = "cmapss-predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "gradio>=6.13.0",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]
